<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fragment_exercise"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".exerciseFragment">
    <TextView
        android:id="@+id/topTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/topTextView"
        android:textSize="60sp"
        android:layout_marginTop="80sp"
        android:layout_marginStart="16sp">
    </TextView>

    <TextView
        android:id="@+id/questionTextView"
        android:layout_below="@+id/topTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="60sp"
        android:layout_marginTop="16sp">

    </TextView>

    <EditText
        android:id="@+id/answerEditText"
        android:layout_below="@+id/questionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:hint="@string/hint"
        android:textSize="60sp"
        android:layout_marginTop="80sp"
        android:layout_marginStart="16sp"
        android:inputType="number"/>

    <Button
        android:id="@+id/doneButton"
        android:layout_below="@+id/answerEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/doneButton"
        android:textSize="40sp"
        android:layout_marginStart="16sp"
        android:textColor="@color/black"
        android:background="@android:color/transparent">

    </Button>

    <ImageView
        android:id="@+id/myImageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/image_description"
        android:scaleType="fitCenter"
        android:src="@drawable/p3"
        android:adjustViewBounds="true"/>


</RelativeLayout>